# playnote-studio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  build.sh  gfx.sketch  notes.md  package-lock.json  readme.md
Source/: config.lua  main.lua  noteFs.lua  pdxinfo  sounds.lua
Source/components/: AutoLayout.lua  Button.lua  Counter.lua  FolderSelect.lua  Group.lua  HomeLogo.lua  KeyValList.lua  NoNoteDialog.lua  PageArrow.lua  Thumbnail.lua
Source/controllers/: ScrollController.lua
Source/data/: cy_strings.json  de_strings.json  en_strings.json  es_strings.json  fr_strings.json  it_strings.json  jp_strings.json  lang.json  nl_strings.json  pl_strings.json  ru_strings.json
Source/fonts/: UgoNumber_8.fnt  WhalesharkSans.fnt
Source/samplememo/: 02_keke2.ppm  (+6 more)
assets/: card-highlighted.ase  card.ase  icon-highlighted.ase  icon-pressed.ase  icon.ase  icon_layer2.ase  logo_anim.ase  nitro_font_data.txt  playnote.sketch
extension/: main.c
ppmlib/: audio.c  audio.h  dither.h  palette.h  platform.h  player.c  player.h  ppm.c  ppm.h  ppmlib.c  ppmlib.h  tables.h  tmb.c  tmb.h  tmblib.c  tmblib.h  types.h  utils.c  utils.h  video.c  video.h
source/: PpmParser.lua  commandseq.lua  config.lua  configManager.lua  credits.txt  dialogManager.lua  gfxUtils.lua  globals.lua  main.lua  noteFs.lua  noteManager.lua  pdxinfo  sceneManager.lua  screenManager.lua  screens.lua  sounds.lua  utils.lua
src/: luaglue.c  luaglue.h  main.c  pd.c  pd.h  ppm.c  ppm.h  ppm_audio.c  ppm_palette.h  ppm_video.c  ppm_video.h
website/: .gitignore  astro.config.mjs  package.json  readme.md  tsconfig.json
(+156 files in other folders)
